import Temporadas from "./Temporadas";

class Baja extends Temporadas {

    constructor() {
        super(0.9);
    }
}

export default Baja;