import Temporadas from "./Temporadas";

class Media extends Temporadas {

    constructor() {
        super(1);
    }
}

export default Media;